# sylveon-python-template-repository

./: LICENSE.md  README.md  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug-report.md  pull_request_template.md
src/sylveon/: __main__.py
src/sylveon/_hello/: __init__.py  _greeting.py
src/sylveon/hello/: greeting.py
src/sylveon/string_length/: find_length.py
tests/: test_addition.py  test_hello_world.py  test_string_length.py  test_sylveon.py
